--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
                     <a href="projects_page.html">
-                        <img src="/images/projects_photo/06-big.jpg" alt="Project img6" class="project__img">
+                        <img src="/img/06-big.jpg" alt="Project img6" class="project__img">
                         <h3 class="project__title">Gaming community</h3>
                     </a>
                 </li>
@@ -125,4 +125,5 @@
     </footer>
 
 </body>
+
 </html>
